--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "@iconify-json/radix-icons": "^1.1.14",
         "@iconify/vue": "^4.1.2",
         "@nuxtjs/color-mode": "^3.4.1",
+        "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/tailwindcss": "^6.12.0",
+        "eslint": "^9.2.0",
         "typescript": "^5.4.5"
     }
 }
