--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.378.0",
         "nuxt": "^3.11.2",
+        "prettier": "^3.2.5",
         "radix-vue": "^1.7.4",
         "shadcn-nuxt": "^0.10.4",
         "tailwind-merge": "^2.3.0",
@@ -25,9 +26,7 @@
         "@iconify-json/radix-icons": "^1.1.14",
         "@iconify/vue": "^4.1.2",
         "@nuxtjs/color-mode": "^3.4.1",
-        "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/tailwindcss": "^6.12.0",
-        "eslint": "^9.2.0",
         "typescript": "^5.4.5"
     }
 }
