--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "@tanstack/vue-table": "^8.16.0",
+        "@unovis/ts": "^1.4.0",
+        "@unovis/vue": "^1.4.0",
+        "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.378.0",
