--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
+        "postinstall": "nuxt prepare",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
     },
     "dependencies": {
+        "@nuxtjs/eslint-config": "^12.0.0",
         "@tanstack/vue-table": "^8.16.0",
         "@unovis/ts": "^1.4.0",
         "@unovis/vue": "^1.4.0",
@@ -18,7 +21,6 @@
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.378.0",
         "nuxt": "^3.11.2",
-        "prettier": "^3.2.5",
         "radix-vue": "^1.7.4",
         "shadcn-nuxt": "^0.10.4",
         "tailwind-merge": "^2.3.0",
@@ -29,8 +31,12 @@
     "devDependencies": {
         "@iconify-json/radix-icons": "^1.1.14",
         "@iconify/vue": "^4.1.2",
+        "@nuxt/eslint-config": "^0.3.12",
         "@nuxtjs/color-mode": "^3.4.1",
+        "@nuxtjs/eslint-config-typescript": "^12.1.0",
+        "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/tailwindcss": "^6.12.0",
+        "eslint": "^8.57.0",
         "typescript": "^5.4.5"
     }
 }
