--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     },
     "dependencies": {
         "@nuxtjs/eslint-config": "^12.0.0",
+        "@nuxtjs/supabase": "^1.2.2",
         "@tanstack/vue-table": "^8.16.0",
         "@unovis/ts": "^1.4.0",
         "@unovis/vue": "^1.4.0",
+        "@vee-validate/zod": "^4.12.8",
         "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -25,8 +27,10 @@
         "shadcn-nuxt": "^0.10.4",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
+        "vee-validate": "^4.12.8",
         "vue": "^3.4.21",
-        "vue-router": "^4.3.0"
+        "vue-router": "^4.3.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@iconify-json/radix-icons": "^1.1.14",
