--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+        "postinstall": "nuxt prepare"
     },
     "dependencies": {
-        "@nuxtjs/eslint-config": "^12.0.0",
         "@nuxtjs/supabase": "^1.2.2",
         "@tanstack/vue-table": "^8.16.0",
         "@unovis/ts": "^1.4.0",
@@ -35,12 +32,8 @@
     "devDependencies": {
         "@iconify-json/radix-icons": "^1.1.14",
         "@iconify/vue": "^4.1.2",
-        "@nuxt/eslint-config": "^0.3.12",
         "@nuxtjs/color-mode": "^3.4.1",
-        "@nuxtjs/eslint-config-typescript": "^12.1.0",
-        "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/tailwindcss": "^6.12.0",
-        "eslint": "^8.57.0",
         "typescript": "^5.4.5"
     }
 }
