--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "@nuxt/image": "^1.7.0",
         "@nuxtjs/supabase": "^1.2.2",
         "@tanstack/vue-table": "^8.16.0",
         "@unovis/ts": "^1.4.0",
