--- a/package.json
+++ b/package.json
@@ -14,26 +14,27 @@
     "@nuxtjs/supabase": "^1.2.2",
     "@supabase/functions-js": "^2.4.1",
     "@supabase/gotrue-js": "^2.62.2",
-    "@supabase/postgrest-js": "^1.15.2",
+    "@supabase/postgrest-js": "^1.15.3",
     "@supabase/realtime-js": "^2.9.5",
     "@supabase/storage-js": "^2.5.5",
     "@supabase/supabase-js": "^2.43.2",
-    "@tanstack/vue-table": "^8.16.0",
-    "@unovis/ts": "^1.4.0",
-    "@unovis/vue": "^1.4.0",
+    "@tanstack/vue-table": "^8.17.3",
+    "@unovis/ts": "^1.4.1",
+    "@unovis/vue": "^1.4.1",
     "@vee-validate/zod": "^4.12.8",
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "googleapis": "^137.1.0",
     "lucide-vue-next": "^0.378.0",
     "nuxt": "^3.11.2",
-    "radix-vue": "^1.7.4",
+    "radix-vue": "^1.8.1",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.12.8",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "vue": "3.3.13",
+    "vue-router": "^4.3.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
