--- a/components.json
+++ b/components.json
@@ -2,9 +2,9 @@
   "$schema": "https://shadcn-vue.com/schema.json",
   "style": "default",
   "typescript": true,
-  "tsConfigPath": "tsconfig.json",
+  "tsConfigPath": ".nuxt/tsconfig.json",
   "tailwind": {
-    "config": "tailwind.config.cjs",
+    "config": "tailwind.config.js",
     "css": "assets/css/tailwind.css",
     "baseColor": "slate",
     "cssVariables": true
