--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "gen:types": "pnpx supabase gen types typescript --project-id \"zxrdktljgadedhajpxjf\" --schema public > types/supabase.type.ts"
   },
   "dependencies": {
     "@internationalized/date": "^3.5.4",
@@ -45,6 +46,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "supabase": ">=1.8.1",
     "typescript": "^5.4.5"
   },
   "resolutions": {
