--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.1.2",
     "vee-validate": "^4.12.8",
     "vue": "3.3.13",
     "vue-router": "^4.3.2",
