--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@tanstack/vue-table": "^8.17.3",
     "@unovis/ts": "^1.4.1",
     "@unovis/vue": "^1.4.1",
-    "@vee-validate/zod": "^4.12.8",
-    "@vueuse/core": "^10.10.0",
+    "@vee-validate/zod": "^4.13.1",
+    "@vue/devtools-api": "^6.6.3",
+    "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "googleapis": "^137.1.0",
     "lucide-vue-next": "^0.378.0",
-    "nuxt": "^3.11.2",
-    "radix-vue": "^1.8.2",
+    "nuxt": "^3.12.1",
+    "pnpm": "^9.3.0",
+    "radix-vue": "^1.8.3",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,11 +55,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.26.0",
     "prettier": "^3.3.2",
-    "prettier-eslint": "^16.1.2",
+    "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "supabase": ">=1.8.1",
+    "supabase": "^1.176.10",
     "typescript": "^5.4.5",
-    "vue-eslint-parser": "^8.0.0"
+    "vue-eslint-parser": "^8.3.0"
   },
   "resolutions": {
     "vue": "3.3.13"
