--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json"
+  "extends": "../.nuxt/tsconfig.server.json",
+  "exclude": [
+    "../eslint.config.mjs",
+    "../helpers/confetti.js",
+    "../tailwind.config.mjs"
+  ]
 }
