--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "exclude": ["eslint.config.mjs", "helpers/confetti.js", "tailwind.config.mjs"]
+  "extends": "./.nuxt/tsconfig.json"
 }
