--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@internationalized/date": "^3.5.4",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/supabase": "^1.2.2",
+    "@radix-icons/vue": "^1.0.0",
     "@supabase/functions-js": "^2.4.1",
     "@supabase/gotrue-js": "^2.62.2",
     "@supabase/postgrest-js": "^1.15.5",
