--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vietclimb-grading",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
