--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vee-validate/zod": "^4.13.1",
     "@vue/devtools-api": "^6.6.3",
     "@vueuse/core": "^10.11.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "googleapis": "^137.1.0",
@@ -51,6 +52,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/canvas-confetti": "^1.6.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
